--- a/web/src/components/Burger/Ingredient/styles.module.css
+++ b/web/src/components/Burger/Ingredient/styles.module.css
@@ -1,25 +1,28 @@
 .BreadBottom {
-    height: 13%;
-    width: 80%;
+    height: 70px;
+    width: 330px;
+    flex-shrink: 0;
     background: linear-gradient(#F08E4A, #e27b36);
     border-radius: 0 0 30px 30px;
     box-shadow: inset -15px 0 #c15711;
-    margin: 2% auto;
+    margin: 2px auto;
 }
 
 .BreadTop {
-    height: 20%;
-    width: 80%;
+    height: 100px;
+    width: 330px;
+    flex-shrink: 0;
     background: linear-gradient(#bc581e, #e27b36);
     border-radius: 50% 50% 0 0;
     box-shadow: inset -15px 0 #c15711;
-    margin: 2% auto;
+    margin: 2px auto;
     position: relative;
 }
 
 .Seeds1 {
     width: 10%;
     height: 15%;
+    flex-shrink: 0;
     position: absolute;
     background-color: white;
     left: 30%;
@@ -58,6 +61,7 @@
   .Seeds2 {
     width: 10%;
     height: 15%;
+    flex-shrink: 0;
     position: absolute;
     background-color: white;
     left: 64%;
@@ -82,32 +86,73 @@
   
 
 .Meat {
-    width: 80%;
-    height: 8%;
+    width: 300px;
+    height: 50px;
+    flex-shrink: 0;
     background: linear-gradient(#7f3608, #702e05);
-    margin: 2% auto;
+    margin: 2px auto;
     border-radius: 15px;
 }
 
 .Cheese {
-    width: 90%;
-    height: 4.5%;
-    margin: 2% auto;
+    width: 300px;
+    height: 15px;
+    flex-shrink: 0;
+    margin: 2px auto;
     background: linear-gradient(#f4d004, #d6bb22);
     border-radius: 20px;
 }
 
 .Salad {
-    width: 85%;
-    height: 7%;
-    margin: 2% auto;
+    width: 320px;
+    height: 33px;
+    flex-shrink: 0;
+    margin: 2px auto;
     background: linear-gradient(#228c1d, #91ce50);
     border-radius: 20px;
 }
 
 .Bacon {
-    width: 80%;
-    height: 3%;
+    width: 310px;
+    height: 8px;
+    flex-shrink: 0;
     background: linear-gradient(#bf3813, #c45e38);
-    margin: 2% auto;
+    margin: 2px auto;
+}
+@media (max-width: 380px) {
+  .BreadBottom {
+    height: 35px;
+    width: 165px;
+    margin: 1px auto;
+}
+
+.BreadTop {
+    height: 50px;
+    width: 165px;
+    margin: 1px auto;
+} 
+
+.Meat {
+    width: 150px;
+    height: 25px;
+    margin: 1px auto;
+}
+
+.Cheese {
+    width: 150px;
+    height: 7.5px;
+    margin: 1px auto;
+}
+
+.Salad {
+    width: 160px;
+    height: 16.5px;
+    margin: 1px auto;
+}
+
+.Bacon {
+    width: 155px;
+    height: 4px;
+    margin: 1px auto;
+}
 }
