--- a/web/src/components/Burger/styles.module.css
+++ b/web/src/components/Burger/styles.module.css
@@ -1,12 +1,28 @@
 .Burger {
   width: 90%;
-  margin: auto;
-  height: 280px;
+  margin: 38px auto;
+  height: 90%;
   text-align: center;
   font-weight: bold;
   font-size: 1.2rem;
+  display: flex;
+  flex-direction: column;
+  justify-content: flex-start;
+}
+.Burger::-webkit-scrollbar {
+  width: 5px;
+}
+.Burger::-webkit-scrollbar-track {
+  background: rgba(8, 8, 8, .1);
+}
+.Burger::-webkit-scrollbar-thumb {
+  background: rgba(8, 8, 8, .1);
 }
 
+.Burger p{
+  margin: 8px;
+}
+/*
 @media (min-width: 500px) and (max-height: 400px) {
   .Burger{
     width: 350px;
@@ -24,4 +40,4 @@
     width: 700px;
     height: 600px;
   }
-}
+}*/
