--- a/web/src/components/Burger/styles.module.css
+++ b/web/src/components/Burger/styles.module.css
@@ -2,42 +2,19 @@
   width: 90%;
   margin: 38px auto;
   height: 90%;
-  text-align: center;
-  font-weight: bold;
-  font-size: 1.2rem;
   display: flex;
   flex-direction: column;
   justify-content: flex-start;
 }
-.Burger::-webkit-scrollbar {
-  width: 5px;
-}
-.Burger::-webkit-scrollbar-track {
-  background: rgba(8, 8, 8, .1);
-}
-.Burger::-webkit-scrollbar-thumb {
-  background: rgba(8, 8, 8, .1);
-}
-
 .Burger p{
-  margin: 8px;
+  text-align: center;
+  font-weight: bold;
+  font-size: 1.1rem;
+  margin: 2px;
 }
-/*
-@media (min-width: 500px) and (max-height: 400px) {
-  .Burger{
-    width: 350px;
-    height: 300px;
+@media (min-width: 381px) {
+  .Burger p{
+    font-size: 1.6rem;
+    margin: 4px;
   }
 }
-@media (min-width: 500px) and (min-height: 401px) {
-  .Burger{
-    width: 450px;
-    height: 400px;
-  }
-}
-@media (min-width: 1000px) and (min-height: 700px) {
-  .Burger{
-    width: 700px;
-    height: 600px;
-  }
-}*/
