--- a/web/src/index.css
+++ b/web/src/index.css
@@ -3,6 +3,8 @@
   --light-grey: #242424;
   --lighter-grey: #444444;
   --white: #ffffee;
+  --green: #064700;
+  --light-green: #0a7a00;
 }
 body {
   margin: 0;
