--- a/web/src/containers/BurgerBuilder/styles.module.css
+++ b/web/src/containers/BurgerBuilder/styles.module.css
@@ -3,7 +3,7 @@
   flex-direction: column-reverse;
   justify-content: space-between;
   align-items: center;
-  margin-top: 10%;
+  margin-top: 42px;
 }
 .BurgerBuilder > div:first-child {
   margin: 5% 0;
