--- a/web/src/components/UI/Modal/styles.module.css
+++ b/web/src/components/UI/Modal/styles.module.css
@@ -1,16 +1,21 @@
-.Modal::before{
-  content: '';
+.Cover{
+  position: fixed;
   left: 0;
+  top: 0;
   width: 100vw;
   height: 100vh;
-  position: fixed;
-  top: 0;
   z-index: -1;
   background-color: var(--grey);
+  opacity: 0;
+  transition: opacity .6s;
+  overflow: hidden;
+}
+.CoverVisible{
+  z-index: 499;
   opacity: .6;
 }
 .Modal {
-    display: none;
+    transform: translateY(-100vh);
     position: fixed;
     z-index: 500;
     background-color: var(--light-grey);
@@ -21,7 +26,7 @@
     left: 10%;
     top: 30%;
     box-sizing: border-box;
-    transition: all .2s ease-out;
+    transition: transform .2s ease-out;
 }
 .Modal h3{
   text-align: center;
@@ -41,6 +46,7 @@
   outline: none;
   width: 35px;
   height: 35px;
+  transition: background-color .2s;
 }
 .Modal button svg{
   height: 22px;
@@ -48,10 +54,10 @@
   fill: var(--white);
 }
 .Modal button:hover{
-  background-color: var(--light-grey);
+  background-color: var(--lighter-grey);
 }
-.Visible{
-  display: initial;
+.ModalVisible{
+  transform: translateY(0);
 }
 
 @media (min-width: 600px){
