--- a/web/src/components/Navigation/Toolbar/styles.module.css
+++ b/web/src/components/Navigation/Toolbar/styles.module.css
@@ -8,7 +8,7 @@
   display: flex;
   justify-content: space-between;
   align-items: center;
-  padding: 5px 20px;
+  padding: 0;
   box-sizing: border-box;
   z-index: 200;
 }
@@ -17,4 +17,5 @@
 }
 .Toolbar nav{
   height: 100%;
+  flex-grow: 0;
 }
