--- a/web/src/components/Navigation/NavItems/styles.module.css
+++ b/web/src/components/Navigation/NavItems/styles.module.css
@@ -2,33 +2,49 @@
   margin: 0;
   padding: 0;
   list-style: none;
-  display: flex;
   align-items: center;
   height: 100%;
+  display: flex;
+  flex-direction: column;
 }
-
 .NavItem{
-  margin: 0;
+  margin: 15px 0;
   box-sizing: border-box;
-  display: flex;
-  height: 100%;
-  align-items: center;
+  display: block;
+  width: 100%;
 }
 .NavItem a{
   color: var(--white);
   text-decoration: none;
-  height: 100%;
-  padding: 16px 10px;
-  border-bottom: 3px solid transparent;
+  width: 100%;
   box-sizing: border-box;
   display: block;
 }
 
-.NavItem a:active,
-.NavItem a.active{
-  background-color: var(--lighter-grey);
-  border-bottom: 3px solid var(--brown);
-}
-.NavItem a:hover{
-  background-color: var(--light-grey);
+@media (min-width: 500px){
+  .NavItems{
+    flex-direction: row;
+  }
+  .NavItem{
+    margin: 0;
+    display: flex;
+    height: 100%;
+    width: auto;
+    align-items: center;
+  }
+  .NavItem a{
+    height: 100%;
+    padding: 16px 10px;
+    border-bottom: 3px solid transparent;
+    white-space: nowrap;
+  }
+  
+  .NavItem a:active,
+  .NavItem a.active{
+    background-color: var(--lighter-grey);
+    border-bottom: 3px solid var(--brown);
+  }
+  .NavItem a:hover{
+    background-color: var(--light-grey);
+  }
 }
