--- a/web/src/components/Navigation/Toolbar/styles.module.css
+++ b/web/src/components/Navigation/Toolbar/styles.module.css
@@ -12,16 +12,40 @@
   box-sizing: border-box;
   z-index: 200;
 }
+.Toolbar button{
+  display: none;
+  align-items: center;
+  justify-content: center;
+  cursor: pointer;
+  width: 30px;
+  height: 30px;padding: 0;
+  margin-left: 15px;
+  background-color: transparent;
+  border: none;
+  outline: none;
+}
 .Toolbar img{
-  height: 100%;
+  height: 90%;
 }
 .Toolbar nav{
   height: 100%;
   flex-grow: 0;
 }
+.MenuIcon{
+  height: 25px;
+  width: 25px;
+  fill: var(--white);
+}
 
 @media (max-width: 499px){
   .DesktopOnly{
     display: none;
+  }
+  .Toolbar button{
+    display: flex;
+  }
+  .Toolbar img{
+    height: 80%;
+    padding: 0 15px;
   }
 }
